# chainlink-charts

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: rust-desktop.yml
crates/desktop/: Cargo.toml  README.md
crates/desktop/src/: app.rs  assets.rs  bff.rs  chart.rs  json_chunks.rs  main.rs  price.rs  stream.rs  unix_time.rs
src/app/: layout.tsx  page.tsx
src/app/api/chainlink/history/: route.ts
src/app/api/chainlink/stream/: route.ts
src/app/api/chainlink/symbols/: route.ts
src/components/: ChartDashboard.tsx  PriceChart.tsx  QueryProvider.tsx
src/hooks/: usePriceStream.ts
src/lib/: process-shutdown-signal.ts
src/lib/chainlink/: auth.ts  candles.test.ts  candles.ts  constants.ts  env.ts  liveBar.test.ts  liveBar.ts  price.ts  resolution.ts  schemas.ts
src/lib/stream/: ndjson.test.ts  ndjson.ts
