[package]
name = "chainlink-charts-desktop"
version = "0.1.0"
edition = "2021"
description = "Native desktop client for chainlink-charts Next.js BFF"

[dependencies]
eframe = { version = "0.29", default-features = true, features = ["default_fonts", "glow"] }
egui = "0.29"
egui_plot = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
thiserror = "2"
futures-util = "0.3"
